--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,20 +1,16 @@
 <!--  Replace menu links here -->
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
+<a class="nav-link" href="{{site.baseurl}}/index.html">&#x9996;&#x9875;</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
+<a class="nav-link" href="{{site.baseurl}}/authors-list.html">&#x4F5C;&#x8005;</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
+<a class="nav-link" href="{{site.baseurl}}/contact.html">&#x8054;&#x7CFB;</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
+<a target="_blank" class="nav-link" href="https://consciousnessbowl.com">&#x610F;&#x8BC6;&#x7897;</a>
 </li>
-<li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-ghost/">Ghost</a>
-</li>
-<li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/donate/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
-</li>
+
+
