--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,8 +64,8 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Segoe UI", "Helvetica Neue", "Arial";
-  font-size: 1rem;
+  font-family: "PMingLiU","NSimSun", "SimSun", "Arial";
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.6;
   color: #212529;
