--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -652,9 +652,9 @@ footer {
     margin-top:10px;
 }
 article {
-	font-size:20px;
+	font-size:0.8rem;
 	line-height:1.86;
-    font-family:Lora;
+    font-family: Georgia,Times,"Times New Roman",serif;
 }
 .article-headline {
     font-family: Georgia,Times,"Times New Roman",serif;
