--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -654,7 +654,7 @@ footer {
 article {
 	font-size:1rem;
 	line-height:1.86;
-    font-family: Georgia,Times,"Times New Roman",serif;
+    font-family: Lora;
 }
 .article-headline {
     font-family: Georgia,Times,"Times New Roman",serif;
