--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,14 +49,24 @@ layout: default
 					Share this
 				</div>
 				<div class="share d-inline-block">
-					<!-- AddToAny BEGIN -->
-					<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-						<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-						<a class="a2a_button_facebook"></a>
-						<a class="a2a_button_twitter"></a>
-					</div>
-					<script async src="https://static.addtoany.com/menu/page.js"></script>
-					<!-- AddToAny END -->
+				<!-- AddToAny BEGIN -->
+				<div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://readunread.cn" data-a2a-title="readunread.cn">
+				<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+				<a class="a2a_button_wechat"></a>
+				<a class="a2a_button_sina_weibo"></a>
+				<a class="a2a_button_douban"></a>
+				<a class="a2a_button_email"></a>
+				<a class="a2a_button_telegram"></a>
+				<a class="a2a_button_printfriendly"></a>
+				</div>
+				<script>
+				var a2a_config = a2a_config || {};
+				a2a_config.onclick = 1;
+				a2a_config.locale = "zh-CN";
+				a2a_config.num_services = 2;
+				</script>
+				<script async src="https://static.addtoany.com/menu/page.js"></script>
+				<!-- AddToAny END -->
 				</div>
 			</div>
 		</div>
