--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,7 +10,7 @@
 <a class="nav-link" href="{{site.baseurl}}/contact.html">&#x8054;&#x7CFB;</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://consciousnessbowl.com">&#x610F;&#x8BC6;&#x7897;</a>
+<a target="_blank" class="nav-link" href="https://readunread.cn">&#x8BFB;&#x4E0E;&#x672A;&#x8BFB;</a>
 </li>
 
 
