--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,6 +10,9 @@
 <a class="nav-link" href="{{site.baseurl}}/contact.html">&#x8054;&#x7CFB;</a>
 </li>
 <li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/about.html">&#x5173;&#x4E8E;</a>
+</li>
+<li class="nav-item">
 <a target="_blank" class="nav-link" href="https://readunread.cn">&#x8BFB;&#x4E0E;&#x672A;&#x8BFB;</a>
 </li>
 
